--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/node": "^17.0.33",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "axios": "^0.27.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
@@ -23,6 +24,7 @@
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.7.1",
+    "sass": "^1.51.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
