--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,12 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
-    "skipLibCheck": true,
+    "skipLibCheck": true /* 跳过类型检查所有.d.ts文件 */,
+    "baseUrl": "./", //设置默认路径
+    //识别@路径
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
