--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^17.0.33",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "axios": "^0.27.2",
+    "element-plus": "^2.2.0",
+    "normalize.css": "^8.0.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
